randomized, parametrized, impl

--- a/fizzbuzz/build.gradle
+++ b/fizzbuzz/build.gradle
@@ -10,4 +10,5 @@ repositories {
 dependencies {
     testCompile "junit:junit:4.11"
     testCompile "pl.pragmatists:JUnitParams:1.0.5"
+    testCompile "com.carrotsearch.randomizedtesting:randomizedtesting-runner:2.5.0"
 }
