--- a/end-to-end/build.gradle
+++ b/end-to-end/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     testCompile "junit:junit:4.11"
+    testCompile 'org.assertj:assertj-core:3.6.2'
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '3.3.1'
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.3.1'
 }
