--- a/2-end-to-end/build.gradle
+++ b/2-end-to-end/build.gradle
@@ -10,8 +10,9 @@ repositories {
 }
 
 dependencies {
-    testCompile "junit:junit:4.11"
+    testCompile 'org.seleniumhq.selenium:selenium-java:3.3.1'
+    testCompile 'org.seleniumhq.selenium:selenium-chrome-driver:3.3.1'
+
+    testCompile "junit:junit:4.12"
     testCompile 'org.assertj:assertj-core:3.6.2'
-    testCompile group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '3.3.1'
-    testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.3.1'
 }
