--- a/3-spock/build.gradle
+++ b/3-spock/build.gradle
@@ -12,4 +12,6 @@ repositories {
 dependencies {
     testCompile 'org.codehaus.groovy:groovy-all:2.4.10'
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+
+    testCompile 'cglib:cglib-nodep:2.2.2'
 }
